# persistedstate

./: .gitignore  .pylintrc  CHANGELOG.md  LICENSE  README.md  example.py  justfile  loggertest.py  mypy.ini  perftest.py  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements-perf.in  requirements-perf.txt  requirements-test.in  requirements-test.txt  setup.py  test.py  test_mappedyaml.py  test_persistedstate.py  test_thread.py
.github/: copilot-instructions.md
benchmarks/: perftest.py
persistedstate/: __init__.py
src/persistedstate/: __init__.py  core.py  file_handler.py  types.py
tests/: test_persistedstate.py  test_thread.py
