[project]
name = "persistedstate"
version = "23.9"
description = "Ultra fast persistent store for small states in mapped YAML file"
readme = "README.md"
license = {text = "MIT License"}
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Utilities",
    "Typing :: Typed",
]
dependencies = ["pyyaml"]

[project.optional-dependencies]
dev = [
    "black",
    "mypy",
    "pylint",
    "scripthelper",
    "twine",
    "types-PyYAML",
]
test = [
    "pytest"
]
perftest = [
    "diskcache",
    "lmdbm",
    "pickledb",
    "sqlitedict",
]

[[project.authors]]
name = "Máté Farkas"
email = "fm@farkas-mate.hu"

[project.urls]
Homepage = "https://github.com/presidento/persistedstate"
Changelog = "https://github.com/presidento/persistedstate/blob/main/CHANGELOG.md"

[tool.setuptools]
package-data = {persistedstate = ["py.typed"]}
