[project]
name = "persistedstate"
version = "24.2"
description = "Ultra fast persistent store for small states in mapped YAML file"
readme = "README.md"
license = "MIT"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Utilities",
    "Typing :: Typed",
]
requires-python = ">=3.9"
dependencies = ["pyyaml"]

[dependency-groups]
dev = [
    "black",
    "mypy",
    "pylint",
    "scripthelper",
    "tox",
    "tox-uv>=1.25",
    "types-PyYAML",
    "pytest"
]
perftest = [
    "diskcache",
    "lmdbm",
    "pickledb",
    "sqlitedict",
]

[[project.authors]]
name = "Máté Farkas"
email = "fm@farkas-mate.hu"

[project.urls]
Homepage = "https://github.com/presidento/persistedstate"
Changelog = "https://github.com/presidento/persistedstate/blob/main/CHANGELOG.md"

[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[tool.tox]
env_list =["py39", "py310", "py311", "py312", "py313"]

[tool.tox.env_run_base]
commands = [["pytest"]]
